<resources>
    <string name="app_name">Mascota</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">캘린더</string>
    <string name="home">홈</string>
    <string name="rainbow">무지개</string>
    <string name="ment">환영합니다! 작가님이 어떤 책을\n만들게 될지 기대됩니다.</string>
    <string name="email">이메일 아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="re_pwe">비밀번호 확인</string>
    <string name="input_id">이메일 아이디 입력</string>
    <string name="input_pw">비밀번호 입력(8자 이상)</string>
    <string name="input_re_pw">비밀번호를 한 번 더 입력해주세요</string>
    <string name="signup">회원가입</string>
    <string name="check">확인</string>
    <string name="email_id">이메일 아이디</string>
    <string name="nim">님</string>
    <string name="end_ment">회원가입이 완료되었습니다.\n\n작가님, 이제 책을 만들기 위한\n간단한 정보를 등록해 볼까요?</string>
    <string name="register_pet">반려동물 등록하기</string>
    <string name="agree">가입과 동시에 개인정보취급방침과 이용약관에 동의합니다.</string>
    <string name="past_day">" 작가님의 지나온 날들"</string>
    <string name="num_record">번째 기록</string>
    <string name="today_is">"오늘은 "</string>
    <string name="with_what_day">와 함께 어떤 하루를 보냈나요?</string>
    <string name="part1">1부</string>
    <string name="part2">2부</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="content">목차</string>
    <string name="edit">편집</string>
    <string name="prepare_rainbow">무지개 준비하기</string>
    <string name="farewell_pet_question">반려동물과 이별했나요?</string>
    <string name="help_document">도움글</string>
    <string name="about_help">도움글에 대해</string>
    <string name="close">닫기</string>
    <string name="farewell_level">이별의 단계</string>
    <string name="rainbow_bridge">무지개 다리</string>
    <string name="help_explain">지금은 먼 훗날의 일이라고 생각될 수 있지만, 언젠가 다가올 이별을 위해 정리했어요. 이별의 과정이 후회로만 기억되지 않도록 도움글을 읽으며 마음을 천천히 준비해 보세요.</string>
    <string name="happy_life">행복한 인생을 보낼 수 있었어요.\n그리고 지금은 작가님보다 한 발 앞서서\n먼저 무지개 다리로 가 친구들과 함께\n작가님을 기다리기로 했습니다.\n\n그동안 행복한 일상을 선물해주셔서 감사합니다.</string>
    <string name="assemble">모아봤어요.</string>
    <string name="now_book">지금까지 쓴 책은 총 2318화</string>
    <string name="with_day">함께 보낸 날은 총 5160일</string>
    <string name="love_explain_1">작가님과 함께하면서</string>
    <string name="love_explain_2">많은 사랑을 받았고, 또 주었어요.</string>
    <string name="love_explain_3">(이)가 사랑을 느꼈던 순간들이에요</string>
    <string name="love_explain_4">에게 사랑을 알려주셔서 감사합니다.</string>
    <string name="tv_pet_name">가나다라마바</string>
    <string name="finish_farewell">이별의 단계가 초기화됩니다.\n무지개 다리를 나가시겠어요?</string>
    <string name="exit">나가기</string>
    <string name="epilogue">에필로그</string>
    <string name="writer_talk">작가의 말</string>
    <string name="farewell_last_level">이별을 마무리하는 마지막 단계예요.</string>
    <string name="talk_writer_story">적어주세요. 그리고 이제는 작가님의 이야기를\n들려주세요.</string>
    <string name="complete_farewell">이별의 단계 완료</string>
    <string name="hear">들려주세요.</string>
    <string name="epilogue_title">에필로그 제목</string>
    <string name="to_be_continue">에서 계속</string>
    <string name="joy_explain_1">맛있는 간식을 먹거나 재미있는 놀이를 할 때, </string>
    <string name="joy_explain_2">작가님은</string>
    <string name="joy_explain_3">(을)를 행복하게 해 주려고</string>
    <string name="joy_explain_4">매순간 노력했어요. 이런 작가님과 함께한 매일매일이</string>
    <string name="joy_explain_5">에게는 기쁜 순간이었습니다.</string>
    <string name="usual_explain_1">매일 색다른 모험을 하지 않아도 좋아요. 평화롭던\n보통의 날들도 아름다운 추억으로 여기 남아 있습니다.</string>
    <string name="angry_explin">평화롭고 행복한 날들만이 의미있는 것은 아니죠.\n때로는 화도 냈고, 투정도 부렸어요. 그 과정에서</string>
    <string name="angry_explin_2">(은)는 다양한 감정을 배우는</string>
    <string name="angry_explain_3">어른 고양이로 성장할 수 있었습니다.</string>
    <string name="boring_explain_1">매일 즐겁지는 않았지만, 그 덕에 고민 걱정 없는\n심심한 날들을 보낼 수도 있었어요. 평화로운 나날들을\n선물해 주셔서 감사합니다.</string>
    <string name="sad_explain_1">때로는 어두운 그늘에 있던 때도 있었지만, 그 덕분에\n강한 햇볕을 피해 감정의 휴식을 취할 수 있었어요.</string>
    <string name="best_bottom">의 최고의 순간</string>
    <string name="end_1">1부를 마치며</string>
    <string name="sad_com">, 우울</string>
    <string name="boring_com">, 심심</string>
    <string name="tv_char">~</string>
    <string name="total_page">/2</string>
    <string name="to_home">홈으로</string>
    <string name="next">다음</string>
    <string name="total_book_name_size">/12)</string>
    <string name="total_prolog_size">/10)</string>
    <string name="hero_register">주인공 등록</string>
    <string name="book_register">책 등록</string>
    <string name="total_name_size">/6)</string>
    <string name="current_pet">"현재 등록된 반려동물 주인공 "</string>
    <string name="num">마리</string>
    <string name="plz_input_pet_name">반려동물의 이름을 입력해 주세요</string>
    <string name="cat">고양이</string>
    <string name="dog">강아지</string>
    <string name="to_be_family">가족이 된 날</string>
    <string name="yyyy_mm_dd">YYYY.MM.DD</string>
    <string name="gender">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="secret">비밀</string>
    <string name="book_title">책 제목</string>
    <string name="plz_input_book">책 제목을 입력해 주세요</string>
    <string name="plz_input_prolog">프롤로그 제목을 입력해 주세요</string>
    <string name="prolog">프롤로그</string>
    <string name="writer_name">작가명</string>
    <string name="plz_input_writer">작가님의 이름을 입력해 주세요</string>
    <string name="prolog_title">프롤로그 제목</string>
    <string name="book_complete">책 생성 완료</string>
    <string name="hero">"주인공 "</string>
    <string name="pet_for_story">마리를 위한 이야기를</string>
    <string name="now_start">이제 시작해 보세요!</string>
    <string name="profile_photo_register">프로필 사진 등록하기</string>
    <string name="album_photo">앨범에서 사진 선택</string>
    <string name="photo_delete">사진 삭제</string>
    <string name="quit">취소</string>
    <string name="content_edit">목차 편집</string>
    <string name="revise">수정</string>
    <string name="delete">삭제</string>
    <string name="content_delete">목차 삭제</string>
    <string name="delete_dialog_content">목차와 이야기가 모두 사라집니다.\n</string>
    <string name="delete_dialog_question">(을)를 삭제하시겠어요? </string>
    <string name="delete_complete">삭제 완료</string>
    <string name="delete_complete_msg">" 목차가 삭제됐어요"</string>
    <string name="content_add">목차 추가</string>
    <string name="add">추가</string>
    <string name="total_content_size">/11)</string>
    <string name="save">저장</string>
    <string name="new_line">\n</string>
    <string name="prolog_name">코봉이와의 7년</string>
    <string name="login">로그인</string>
    <string name="not_id">아이디를 찾을 수 없습니다</string>
    <string name="not_pw">비밀번호를 찾을 수 없습니다</string>
    <string name="sign_up">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="reset_pw">비밀번호 재설정</string>
    <string name="pw">비밀번호</string>
    <string name="pw_hint">비밀번호 입력(8자 이상)</string>
    <string name="id_hint">이메일 아이디 입력</string>
    <string name="login_fail">로그인 실패</string>
    <string name="login_fail_msg">아이디 또는 비밀번호가 일치하지 않습니다.\n다시 로그인 해 주세요.</string>
    <string name="story_write">이야기 작성</string>
    <string name="select_writer_emotion">작가의 기분 선택</string>
    <string name="select_writer_today_emotion">작가님의 오늘 기분을 선택해 주세요</string>
    <string name="deny_explain">반려동물과 이별했다는 걸 믿을 수 없어요</string>
    <string name="angry_explain">이별의 원인에 화가 나요</string>
    <string name="regret_explain">더 잘 해 주지 못 한 게 후회가 돼요</string>
    <string name="sad_explain">이별 때문에 슬프고 우울해요</string>
    <string name="loss_explain">반려동물과의 이별에 상실감을 느껴요</string>
    <string name="accept_explain">이별을 받아들이고 있어요</string>
    <string name="write_complete">작성 완료</string>
    <string name="deny">부정</string>
    <string name="rage">분노</string>
    <string name="regret">후회</string>
    <string name="loss">상실</string>
    <string name="depressed">우울</string>
    <string name="accept">수용</string>
    <string name="writer">"작가 "</string>
    <string name="writer_select_emo">작가님이 선택한 감정</string>
    <string name="help_talk">도움이 되는 말</string>
    <string name="sad_solution">사랑하는 반려동물과 이별했을 때 슬픔을 느끼는 것은 당연합니다. 급하게 감정을 정리하려 하지 마세요. 지금 느끼는 슬픔 속에서 천천히 마음을 정리하는 것이, 사랑하는 존재를 떠나보내기 위해 해야할 일입니다.</string>
    <string name="soeun">최소은</string>
    <string name="day162">162</string>
    <string name="cobong">코봉이</string>
    <string name="chapter">"1부 "</string>
    <string name="home_title">모여봐요 코봉의 숲</string>
    <string name="episode">161화</string>
    <string name="diary_title">코봉이의 중성화날</string>
    <string name="diary_date">2020.03.03</string>
    <string name="day">17일</string>
    <string name="write">이야기 기록하기</string>
    <string name="how_today">오늘 주인공은 어떤</string>
    <string name="question">하루를 보냈나요?</string>
    <string name="date">2021년 6월</string>
    <string name="one">1</string>
    <string name="chapter1">제 1장</string>
    <string name="cobong_spring">코봉의 봄</string>
    <string name="total">총 0화</string>
    <string name="cur_name_size">(0</string>
    <string name="pet1_name">주인공 1의 이름</string>
    <string name="pet1">주인공 1</string>
    <string name="author_soeun">작가 최소은</string>
    <string name="now_cobong_what_life">Q.지금까지 코봉이는 어떤 삶을 살았나요?\n\n</string>
    <string name="date_day">"13일\n금요일"</string>
    <string name="diary_content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하가나다라마바사아</string>
    <string name="content_title">코봉이와의 첫만남</string>
    <string name="month7">7월</string>
    <string name="help_message">[블로그] 반려동물 장례식장 처음이라면, 보호자가 알고 있어야 하는 내용</string>
    <string name="finish_cobong">코봉의 이야기를 마무리하시겠어요?</string>
    <string name="know_what_hero">어느 주인공과 이별했는지 알려주세요</string>
    <string name="date_story">2020년 5월의 이야기</string>
    <string name="full_date">2021년 7월 8일</string>
    <string name="together">함께한 지 2021일</string>
    <string name="with_story">작가님과 함께했던 2318화의 이야기 속에서</string>
    <string name="brave_cat">가나다라마바(은)는 의젓하고 당당한 고양이로서</string>
    <string name="feel_moment">가나다라마바(이)가 느꼈던 최고의 순간들을</string>
    <string name="talk_pet">가나다라마바의 행복한 시간들을 잘 보셨나요?\n작가님과 함께했던 가나다라마바의 삶이 어땠는지</string>
    <string name="end_story">가나다라마바의 이야기를 마무리하는 글을 적어주세요\n\n\n\n\n</string>
    <string name="thanks_cobong">코봉아 고마웠어</string>
    <string name="epilogue_content">코봉이는 나와 이제 이별하게 됐다. 기분이 이상하다. 어제까지만 해도 내 무릎 위에서 함께 잠들었는데. 코봉이가 보고 싶다.</string>
    <string name="angry_solution">가나다라마바(와)과 이별했다고 해서 함께 한 추억까지 사라지는 것은 아닙니다. 작가님과 가나다라마바의 추억은 시간이 지나도 영원히 가나다라마바(은)는 작가님의 기억 속에 살아 숨쉬고 있을 거예요.</string>
    <string name="love">사랑</string>
    <string name="joy">기쁨</string>
    <string name="usual">보통</string>
    <string name="sad">우울</string>
    <string name="angry">화남</string>
    <string name="boring">심심</string>
    <string name="emotion_delete">기분 삭제</string>
    <string name="cancel">취소</string>
    <string name="add_image">사진 첨부</string>
    <string name="amount_image">(최대 5장)</string>
    <string name="select_chapter">목차 선택</string>
    <string name="picker_date">날짜 선택</string>
    <string name="title">제목</string>
    <string name="story">이야기 내용</string>
    <string name="story_hint">오늘 주인공에게 어떤 일이 있었나요?</string>
    <string name="finish">작성 완료</string>
    <string name="bottomsheet_add">일기 사진 첨부하기</string>
    <string name="bottomsheet_select">앨범에서 사진 선택</string>
    <string name="title_top">162화 작성</string>
    <string name="select_hero">주인공 및 기분 선택</string>
    <string name="explain_tv">오늘 이야기의 주인공을 모두 선택해 주세요</string>
    <string name="write_story">이야기 작성</string>
    <string name="image_upload">사진 업로드</string>
</resources>